[package]
name = "rapidzkey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-circom = { git = "https://github.com/philsippl/ark-circom.git", branch = "philsippl/zkey_writer" }
ark-bn254 = { version = "0.3.0" }
rand_chacha = { version = "0.3.1" }
clap = { version = "3.2.1" }

[profile.release]
lto = "fat"
codegen-units = 1